<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DifficultySelect">

    <RelativeLayout
        android:id="@+id/game_name_layout"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="#C0ADC5">

        <TextView
            android:id="@+id/game_name_text"
            android:layout_width="120dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/game_name_24"
            android:textColor="#000000"
            android:textSize="50sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_difficulty"
        android:textColor="#000000"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/game_name_layout"
        android:layout_marginTop="30dp">

    </TextView>

    <LinearLayout
        android:id="@+id/choices_layout"
        android:layout_width="260dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:background="#3A3E54"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/novice_button"
            android:layout_width="235dp"
            android:layout_height="60dp"
            android:text="@string/novice"
            android:textColor="#000000"
            app:backgroundTint="#ebebeb"
            android:textSize="25sp"
            android:onClick="difficultyOnClick">
        </Button>

        <Button
            android:id="@+id/casual_button"
            android:layout_width="235dp"
            android:layout_height="60dp"
            android:text="@string/casual"
            android:textColor="#000000"
            app:backgroundTint="#ebebeb"
            android:textSize="25sp"
            android:onClick="difficultyOnClick">
        </Button>

        <Button
            android:id="@+id/challenging_button"
            android:layout_width="235dp"
            android:layout_height="60dp"
            android:text="@string/challenging"
            android:textColor="#000000"
            app:backgroundTint="#ebebeb"
            android:textSize="25sp"
            android:onClick="difficultyOnClick">
        </Button>

        <Button
            android:id="@+id/insane_button"
            android:layout_width="235dp"
            android:layout_height="60dp"
            android:text="@string/insane"
            android:textColor="#000000"
            app:backgroundTint="#ebebeb"
            android:textSize="25sp"
            android:onClick="difficultyOnClick">
        </Button>

    </LinearLayout>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:text="@string/back"
        android:textColor="#000000"
        app:backgroundTint="#ebebeb"
        android:textSize="20sp"
        android:layout_below="@+id/choices_layout"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="230dp"
        android:layout_marginStart="230dp"
        android:onClick="backOnClick">
    </Button>

</RelativeLayout>