<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/game_name_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="#C0ADC5">

        <TextView
            android:id="@+id/game_name_text"
            android:layout_width="120dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/game_name_24"
            android:textColor="#000000"
            android:textSize="50sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:background="#3A3E54"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:text="@string/level_select"
            android:textColor="#000000"
            app:backgroundTint="#ebebeb"
            android:textSize="25sp"
            android:onClick="levelSelectOnClick">
        </Button>

        <Button
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:text="@string/timed_trials"
            android:textColor="#000000"
            app:backgroundTint="#ebebeb"
            android:textSize="25sp"
            android:onClick="timedTrialsOnClick">
        </Button>

        <Button
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:text="@string/endless"
            android:textColor="#000000"
            app:backgroundTint="#ebebeb"
            android:textSize="25sp"
            android:onClick="endlessOnClick">
        </Button>

        <Button
            android:layout_width="225dp"
            android:layout_height="60dp"
            android:text="@string/instructions"
            android:textColor="#000000"
            app:backgroundTint="#ebebeb"
            android:textSize="25sp"
            android:onClick="instructionsOnClick">
        </Button>

    </LinearLayout>

</RelativeLayout>