<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimedTrialsActivity">

    <RelativeLayout
        android:id="@+id/game_name_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#C0ADC5">

        <TextView
            android:id="@+id/game_name_text"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/game_name_24"
            android:textColor="#000000"
            android:textSize="50sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_name_layout"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/addition_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <Button
                android:id="@+id/addition_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                app:backgroundTint="#ebebeb"
                android:layout_margin="5dp"
                android:onClick="operationOnClick"
                android:textSize="25sp"
                android:text="@string/plus">
            </Button>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/subtraction_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/subtraction_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                app:backgroundTint="#ebebeb"
                android:layout_margin="5dp"
                android:onClick="operationOnClick"
                android:textSize="25sp"
                android:text="@string/minus">
            </Button>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/multiplication_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/multiplication_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                app:backgroundTint="#ebebeb"
                android:layout_margin="5dp"
                android:onClick="operationOnClick"
                android:textSize="25sp"
                android:text="@string/multiply">
            </Button>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/division_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/division_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                app:backgroundTint="#ebebeb"
                android:layout_margin="5dp"
                android:onClick="operationOnClick"
                android:textSize="25sp"
                android:text="@string/divide">
            </Button>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/all_card_layouts"
        android:layout_width="250dp"
        android:layout_height="500dp"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/game_name_layout"
        android:rowCount="2"
        android:columnCount="2">

        <RelativeLayout
            android:id="@+id/card_layout_0"
            android:layout_width="125dp"
            android:layout_height="250dp">

            <Button
                android:id="@+id/card_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                app:backgroundTint="#ebebeb"
                android:layout_margin="5dp"
                android:onClick="cardOnClick"
                android:textSize="30sp">
            </Button>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/card_layout_1"
            android:layout_width="125dp"
            android:layout_height="250dp"
            android:layout_toRightOf="@+id/card_layout_0"
            android:layout_toEndOf="@+id/card_layout_0">

            <Button
                android:id="@+id/card_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                app:backgroundTint="#ebebeb"
                android:layout_margin="5dp"
                android:onClick="cardOnClick"
                android:textSize="30sp">
            </Button>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/card_layout_2"
            android:layout_width="125dp"
            android:layout_height="250dp"
            android:layout_below="@+id/card_layout_0">

            <Button
                android:id="@+id/card_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                app:backgroundTint="#ebebeb"
                android:layout_margin="5dp"
                android:onClick="cardOnClick"
                android:textSize="30sp">
            </Button>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/card_layout_3"
            android:layout_width="125dp"
            android:layout_height="250dp"
            android:layout_toRightOf="@+id/card_layout_2"
            android:layout_toEndOf="@+id/card_layout_2"
            android:layout_below="@+id/card_layout_1">

            <Button
                android:id="@+id/card_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                app:backgroundTint="#ebebeb"
                android:layout_margin="5dp"
                android:onClick="cardOnClick"
                android:textSize="30sp">
            </Button>
        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>